# squarebeats

./: .gitignore  BUILD_AND_TEST.md  BUILD_WITH_PROJUCER.md  CMakeLists.txt  COMPREHENSIVE_TEST_RESULTS.md  HELP_ABOUT_DIALOG.md  PENDULUM_MODE_FIX.md  PER_COLOR_LOOP_LENGTHS.md  PITCH_LENGTH_GLOBAL_UPDATE.md  PLAYMODE_SYNC_FIX.md  PLAY_MODE_PRESET_FIX.md  PRESET_FEATURE_SUMMARY.md  PRESET_SYSTEM.md  PROBABILITY_JUMP_SIZE_FIX.md  PROBABILITY_MODE_ANALYSIS.md  PROBABILITY_MODE_COMPLETE_FIX.md  PROBABILITY_MODE_FIX.md  QUICK_FIX_SUMMARY.md  README.md  SCALE_SEQUENCER_SAVE_FIX.md  SYNC_SOLUTION_EXPLAINED.md  SquareBeats.jucer  TAB_BUTTON_UX_IMPROVEMENT.md  TASK_10_SUMMARY.md  TASK_11_SUMMARY.md  TASK_12_SUMMARY.md  TASK_13_SUMMARY.md  TASK_14_SUMMARY.md  TASK_16_SUMMARY.md  TASK_17_SUMMARY.md  TASK_18_SUMMARY.md  TASK_19_SUMMARY.md  TASK_1_SUMMARY.md  TASK_2_SUMMARY.md  TASK_3_SUMMARY.md  TASK_6_SUMMARY.md  TASK_7_SUMMARY.md  TASK_9_SUMMARY.md  TESTING_RESULTS.md  UI_LAYOUT_CONSOLIDATION.md  (+12 more)
Source/: AppFont.h  ColorConfigPanel.cpp  ColorConfigPanel.h  ColorSelectorComponent.cpp  ColorSelectorComponent.h  ControlButtons.cpp  ControlButtons.h  ConversionUtils.h  ConversionUtils.standalone.test.cpp  ConversionUtils.test.cpp  DataStructures.h  GateFlashOverlay.cpp  GateFlashOverlay.h  HelpAboutDialog.cpp  HelpAboutDialog.h  LoopLengthSelector.cpp  LoopLengthSelector.h  MIDIGenerator.cpp  MIDIGenerator.h  MIDIGenerator.standalone.test.cpp  MIDIGenerator.test.cpp  PatternModel.cpp  PatternModel.h  PatternModel.standalone.test.cpp  PatternModel.test.cpp  PitchSequencer.standalone.test.cpp  PitchSequencerComponent.cpp  PitchSequencerComponent.h  PitchSequencerComponent.standalone.test.cpp  PitchSequencerIntegration.standalone.test.cpp  PlayModeControls.cpp  PlayModeControls.h  PlaybackEngine.cpp  PlaybackEngine.h  PlaybackEngine.test.cpp  PluginEditor.cpp  PluginEditor.h  PluginEditor.test.cpp  PluginProcessor.cpp  PluginProcessor.h  (+20 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATION.md  FEATURES.md  PRESET_SYSTEM.md  README.md  USER_GUIDE.md
